test/classes/errors/nilability-assign/assign-nonnil-borrowed-from-oknil-owned.chpl
//  lhs: borrowed!  rhs: owned?  error: nlb

class MyClass {  var x: int;  }

var lhs = new borrowed MyClass();
var rhs: owned MyClass?;

lhs = rhs;

compilerError("done");

